<resources>
    <string name="app_name" translatable="false">Sutori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_should_not_be_empty" >Email should not be empty</string>
    <string name="password_should_not_be_empty" >Password should not be empty</string>
    <string name="name" >Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="story_not_found" >Story not found</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="add_story" >Add story</string>
    <string name="camera" >Camera</string>
    <string name="gallery" >Gallery</string>
    <string name="description" >Description</string>
    <string name="take_picture" >Take picture</string>
    <string name="switch_camera" >Switch camera</string>
    <string name="sutori_logo_image" >Sutori logo image</string>
    <string name="preview_image" >Preview image</string>
    <string name="story_image" >Story image</string>
    <string name="upload" >Upload</string>
    <string name="user_name" >User Name</string>
    <string name="story_thumbnail">Story thumbnail</string>
    <string name="password_6_chars">Password must have at least 6 characters</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="name_should_not_be_empty" >Name should not be empty</string>
    <string name="retry">Try again</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="location">Location</string>
    <string name="no_location">There is no location</string>
    <string name="couldnt_get_permission">Couldn\'t get permission</string>
    <string name="camera_permission_granted">Camera permission has been granted</string>
    <string name="failed_showing_camera">Failed showing camera</string>
    <string name="fail_to_take_picture">Fail to take picture</string>
    <string name="take_location">Take Location</string>
    <string name="location_found">Location found</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>