<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment"
    android:padding="24dp"
    >

    <ImageView
        android:id="@+id/image_signup"
        android:layout_width="184dp"
        android:layout_height="136dp"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/sutori_logo_image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/text_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        />

    <com.hasnarof.storyapp.view.CustomEditText
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/text_label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/text_input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        />

    <com.hasnarof.storyapp.view.CustomEditText
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/text_label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/text_label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/text_input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        />

    <com.hasnarof.storyapp.view.CustomEditText
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/text_label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8dp"
        android:padding="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/primary_teal"
        app:rippleColor="@color/primary_teal"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in"
        style="?attr/materialButtonOutlinedStyle"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
